Added way to reset DateTimes based on intervals of repeats. Don't know why it is not working though.  smsGateway.py file seems to not be executing.

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,8 +42,8 @@
                     <option value="No Repeats">No Repeats</option>
                     <option value="Every Minute">Every Minute</option>
                     <option value="Every Hour">Every Hour</option>
-                    <option value="Every 12 hours"> Every 12 Hours</option>
-                    <option value="Daily (24 hours)">Daily (24 hours)</option>
+                    <option value="Every 12 Hours"> Every 12 Hours</option>
+                    <option value="Daily (24 Hours)">Daily (24 hours)</option>
                     <option value="Every 2 days (48 hours)">Every 2 Days (48 hours)</option>
                     <option value="Weekly (7 Days)">Weekly (7 Days)</option>
                 </select>
