Got app to be functional.

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,12 +18,17 @@
 
             <form id="myForm" action="http://localhost:5000/submit" method="POST">
                 <!-- Telephone Number Input -->
-                <label for="phoneNumber">Enter your phone number:</label>
+                <label for="phoneNumber">Enter your phone number. Please do not include the '1' before your phone number:</label>
                 <input type="tel" id="phoneNumber" name="phoneNumber" pattern="[0-9]{10}" placeholder="1234567890"
                 required>
                 <br><br>
 
-                <small>Format: 1234567890</small> <br><br>
+                <small>Format: 4230918735</small> <br><br>
+
+                <img src="" alt="">
+
+
+
 
                 <!-- Text Mesage Input -->
                 <label for="message">Enter your text message:</label>
