--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,29 @@
 body {
-    text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: large;
-    color: brown;
+    background-color: lightblue;
+}
+/* Creates the InputOutput flexbox */
+.InputOutput{
+    display: flex;
+}
+
+/* This is an item within the InputOutput flexbox.  It is also 1 of 2 div classes */
+.form{
+    font-size: larger;
+    background-color: green;
+    display: flex;
+}
+
+/* .Output{
+
+} */
+
+.form #phoneNumber {
+    color: black;
+    background-color: violet;
+}
+
+.flexContainer1 div{
+    border: 4px solid brown;
 }
